File: components/nexus-base/src/main/java/org/sonatype/nexus/internal/log/LogbackLogManager.java